--- a/control-de-stock-be/docker-compose.yml
+++ b/control-de-stock-be/docker-compose.yml
@@ -1,51 +1,22 @@
-version: '3.8'
-
 services:
-  db:
+  postgres_db:
     image: postgres:15
-    container_name: control-stock-db
+    container_name: stock_postgres_db
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: control_stock_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - '${POSTGRES_PORT}:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init-db:/docker-entrypoint-initdb.d
-    networks:
-      - control-stock-network
-
-  app:
-    build: .
-    container_name: control-stock-api
-    restart: always
-    ports:
-      - "3000:3000"
-    environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USERNAME: postgres
-      DB_PASSWORD: postgres
-      DB_DATABASE: control_stock_db
-      JWT_SECRET: your-super-secret-jwt-key-change-this-in-production
-      JWT_EXPIRES_IN: 24h
-      PORT: 3000
-      NODE_ENV: development
-      FRONTEND_URL: http://localhost:4200
-    depends_on:
-      - db
-    volumes:
-      - .:/app
-      - /app/node_modules
-    networks:
-      - control-stock-network
-    command: npm run start:dev
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}']
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
-
-networks:
-  control-stock-network:
-    driver: bridge
